deps/v8/test/message/fail/import-reserved-word.out
*%(basename)s:5: SyntaxError: Unexpected reserved word
import { import } from "mod";
         ^^^^^^
SyntaxError: Unexpected reserved word
